UE03_Kubernetes/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubectl-test
spec:
  serviceAccountName: pod-reader-sa
  containers:
  - name: kubectl
    image: bitnami/kubectl
    command: ["sleep", "3600"]
