UE03_Kubernetes/recipe-secure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-api-secure
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recipe-api
  template:
    metadata:
      labels:
        app: recipe-api
    spec:
      containers:
      - name: recipe-api
        image: vstadtmueller/recipe-api:latest
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: recipe-service-secure
spec:
  selector:
    app: recipe-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipe-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: recipe.local-test.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: recipe-service-secure
            port:
              number: 80
